feat: start SSM 2.0 core rebuild